[package]
name = "sei-wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2" 
cw20 = "0.13.2"
thiserror = "1.0.31"

[dev-dependencies]
cosmwasm-schema = "1.0.0"